[project]
name = "obsidian-tagger"
version = "0.1.0"
description = ""
authors = [
    {name = "Teague McMillan",email = "teague@svgrace.net"}
]
readme = "README.md"
requires-python = ">=3.11.9,<4.0"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "fastembed (>=0.6.0,<0.7.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "faiss-cpu (>=1.10.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "langchain-core (>=0.3.51,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
