[project]
name = "rivet"
version = "0.1.0"
description = ""
authors = [
    {name = "Teague McMillan",email = "teague@svgrace.net"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastembed (>=0.6.1,<0.7.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "langchain-core (>=0.3.56,<0.4.0)",
    "langchain-community (>=0.3.22,<0.4.0)",
    "pyside6 (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
